[ADD] Segunda parte ejercicio cats cars: agrego rutas y vistas

--- a/views/cats.ejs
+++ b/views/cats.ejs
@@ -23,7 +23,7 @@
     <script>
         $('document').ready(function () {
             for (let i = 1; i <= 4; i++) {
-                $('#cats').append('<div class="col-3 p-3 d-block text-center"><img class="mx-auto bg-light border border-secondary rounded my-2" src="/img/g' + i + '.jpg"><h5>' + i + '</h5></div>');
+                $('#cats').append('<div class="col-3 p-3 d-block text-center"><img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g' + i + '.jpg"><h5>' + i + '</h5></div>');
             }
         });
     </script>
