--- a/views/cars.ejs
+++ b/views/cars.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-primary">
-    <div class="container">
+    <div class="containe">
         <div id="cars" class="row"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
