--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,12 +8,12 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="/static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="/static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 
 <body>
-  <nav class="teal darken-3" role="navigation">
+  <!-- <nav class="teal darken-3" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Cars & Cats</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Actualización de vehículos</a></li>
@@ -24,7 +24,7 @@
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
-  </nav>
+  </nav> -->
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
@@ -152,8 +152,8 @@
 
       <!--  Scripts-->
       <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script src="js/materialize.js"></script>
-      <script src="js/init.js"></script>
+      <script src="/static/js/materialize.js"></script>
+      <script src="/static/js/init.js"></script>
 
 </body>
 
