--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
   <title>Document</title>
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="/static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="/static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 
 </head>
 
@@ -25,8 +25,8 @@
   </div>
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="/static/js/materialize.js"></script>
+  <script src="/static/js/init.js"></script>
 
   <script>
     $(document).ready(function() {
