--- a/views/cats.ejs
+++ b/views/cats.ejs
@@ -13,21 +13,32 @@
 
 <body class="bg-primary">
     <div class="container">
-        <div id="cats" class="row"></div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
-    <script>
-        $('document').ready(function () {
-            for (let i = 1; i <= 4; i++) {
-                $('#cats').append('<div class="col-3 p-3 d-block text-center"><img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g' + i + '.jpg"><h5>' + i + '</h5></div>');
-            }
-        });
-    </script>
+        <div id="cats" class="row">
+            <div class="col-3 p-3 d-block text-center">
+                <a href="/cat/1">
+                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g1.jpg" />
+                </a>
+            </div>
+            <div class="col-3 p-3 d-block text-center">
+                <a href="#">
+                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g2.jpg" />
+                </a>
+            </div>
+            <div class="col-3 p-3 d-block text-center">
+                <a href="/ruta">
+                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g3.jpg" />
+                </a>
+            </div>
+            <div class="col-3 p-3 d-block text-center">
+                <a href="#">
+                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g4.jpg" />
+                </a>
+            </div>
 
+        </div>
+
+    <script src=" https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 
 </html>
