--- a/views/cats.ejs
+++ b/views/cats.ejs
@@ -16,22 +16,22 @@
         <div id="cats" class="row">
             <div class="col-3 p-3 d-block text-center">
                 <a href="/cat/1">
-                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g1.jpg" />
+                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/cat/1.jpg" />
                 </a>
             </div>
             <div class="col-3 p-3 d-block text-center">
-                <a href="#">
-                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g2.jpg" />
+                <a href="/cat/2">
+                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/cat/2.jpg" />
                 </a>
             </div>
             <div class="col-3 p-3 d-block text-center">
-                <a href="/ruta">
-                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g3.jpg" />
+                <a href="/cat/3">
+                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/cat/3.jpg" />
                 </a>
             </div>
             <div class="col-3 p-3 d-block text-center">
-                <a href="#">
-                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/g4.jpg" />
+                <a href="cat/4">
+                    <img class="mx-auto bg-light border border-secondary rounded my-2" src="/static/img/cat/4.jpg" />
                 </a>
             </div>
 
